--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,10 @@
 .bg {
-  margin:0;
-  height:100%;
-  display:block;
-  width:100%; height:100%;
-  object-fit: cover;
+    overflow:hidden;
+    min-height:100%;
+    min-width:100%;
+    position:absolute;
+    margin: 0;
+    object-fit: cover;
 }
-
 
 
