added color for toggler

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,3 +22,11 @@ a.nav-link.current {
     background-color: #e1eedd;
     color:#183a1d;
 }
+
+.navbar-toggler-icon  {
+    color: #e1eedd;
+    width: 100%;
+    height:100%;
+}
+
+
