--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,4 +29,42 @@ a.nav-link.current {
     height:100%;
 }
 
+.sun-media {
+    
+    height:33vh;
 
+    background: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1053&q=80') no-repeat center center ;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    position: relative;
+    padding-left: 0px;
+    padding-right: 0px;
+    border-radius: 50%;
+}
+
+.snow-media {
+    
+    height:33vh;
+
+    background: url('https://images.unsplash.com/photo-1594308063917-a431bc9bceff?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1051&q=80') no-repeat center center ;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    position: relative;
+    padding-left: 0px;
+    padding-right: 0px;
+    border-radius: 50%;
+}
