--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,10 @@ a.nav-link.current {
     height:100%;
 }
 
+.choice-question {
+    color:#e1eedd;
+}
+
 .container-choice {
     height:100vh;
 
@@ -64,14 +68,14 @@ a.nav-link.current {
     position: relative;
     padding-left: 0px;
     padding-right: 0px;
-    border-radius: 50%;
+    border-radius: 10%;
 }
 
 .snow-media {
     
     height:33vh;
 
-    background: url('https://images.unsplash.com/photo-1594308063917-a431bc9bceff?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1051&q=80') no-repeat center center ;
+    background: url('https://cdn.pixabay.com/photo/2021/01/09/20/23/road-5903402__340.jpg') no-repeat center center ;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -84,12 +88,12 @@ a.nav-link.current {
     position: relative;
     padding-left: 0px;
     padding-right: 0px;
-    border-radius: 50%;
+    border-radius: 10%;
 }
 
 .jumbotron {
-    
-    background-color: rgba(0, 0, 0, 0);
+    height:100vh;
+    background-color: rgba(0, 0, 0, 0.3);
 }
 
 
