--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,18 +115,13 @@ a.nav-link.current {
 
 #card0, #card1, #card2, #card3, #card4, #card5 {
     display: inline;
-    height: 100px;
-    width: 288px;
     float: left;
     text-align: center;
     margin: 20px 20px 20px 20px;
     border: 1px 1px 0px 1px solid #2b6777 ;    
     background-color: #2b6777;
     color: #e1eedd;
-    font-size:1.2rem;
-    font-weight:500;
-    line-height:1.5;
-    margin-bottom:1rem;
+    
 }
 
 .card-body {
@@ -134,8 +129,9 @@ a.nav-link.current {
     color: #e1eedd;
 }
 
-.sun-card-body {
-    padding: 20px 20px 20px 20px ;
+img.card-image-top {
+    height: 288px;
+    width: 216px;
 }
 
 
