--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,7 +122,6 @@ a.nav-link.current {
     background-color: #2b6777;
     color: #e1eedd;
     width: 33vh;
-    height: 33vh;
 }
 
 .card-body {
@@ -130,6 +129,10 @@ a.nav-link.current {
     color: #e1eedd;
 }
 
-
+.card-img-top {
+    width: 100%;
+    height: 15vw;
+    object-fit: cover;
+}
 
 
