--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
     margin-bottom: 0;
     border: 0;
     width: 100%;
-    background-color: #183a1d;
+    background-color: #2b6777;
 }
 
 a.nav-link {
@@ -121,6 +121,10 @@ a.nav-link.current {
   background-color: #15b3bb;
 }
 
+.btn.active {
+  background-color: #1e4853;
+  color: #e1eedd;
+}
 
 
 /*For shadow and opacity on choices*/
