--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,10 @@ a.nav-link.current {
 
 .choice-question {
     color:#2b6777;
+    -webkit-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    transform: scale(1.3);
+    transition: 3s ease;
 }
 
 .container-choice {
