--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,7 +106,7 @@ a.nav-link.current {
     text-align: center;
 }
 
-.btn {
+.myBtn {
   border: none;
   outline: none;
   padding: 10px 10px;
@@ -118,16 +118,16 @@ a.nav-link.current {
   box-shadow: 3px 3px 4px #000; 
 }
 
-.btn:hover {
+.myBtn:hover {
   background-color: #15b3bb;
 }
 
-.btn:active {
+.myBtn:active {
   background-color: #1e4853;
   color: #e1eedd;
 }
 
-.btn:focus {
+.myBtn:focus {
     background-color: #1e4853;
 }
 
