--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,10 +186,12 @@ a.nav-link.current {
     border:1px solid #2b6777 ;
 }
 
-#footer {
-    background-color:#2b6777 ;
+.sticky-footer {
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #2b6777;
     color: #e1eedd;
-    height: 100px;
 }
 
 .social-icons a {
