changed color for nav current

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ a.navbar-brand {
 
 a.nav-link.current {
     background-color: #e1eedd;
-    color:#183a1d;
+    color:#2b6777;
 }
 
 .navbar-toggler-icon  {
