--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@ a.navbar-brand {
 a.nav-link.current {
     background-color: #e1eedd;
     color:#2b6777;
+    border-radius: 5%;
 }
 
 .navbar-toggler-icon  {
@@ -112,6 +113,7 @@ a.nav-link.current {
   -moz-box-shadow: 3px 3px 4px #000; 
   -webkit-box-shadow: 3px 3px 4px #000; 
   box-shadow: 3px 3px 4px #000; 
+  border-radius: 5%;
 }
 
 .myBtn:hover {
