--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,8 +43,8 @@ a.nav-link.current {
 }
 
 .container-choice {
-    height:66vh;
-    display: flex;
+    min-height:33vh;
+    display: block;
     align-items: center;
     justify-content: center;
 
@@ -96,7 +96,7 @@ a.nav-link.current {
 }
 
 .jumbotron {
-    height:66vh;
+    height:33vh;
     background-color:#e1eedd;
 }
 
@@ -212,6 +212,7 @@ a.nav-link.current {
 }
 
 .sticky-footer {
+    position: flex;
     bottom: 0;
     width: 100%;
     height: 60px;
@@ -231,3 +232,16 @@ a.nav-link.current {
 .register-Btn {
  text-align: center;
 }
+
+hr {
+  width: 66%;
+  display: block;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  margin-left: auto;
+  margin-right: auto;
+  border-style: inset;
+  border-width: 1px;
+}
+
+
