--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,6 +211,54 @@ a.nav-link.current {
     position: relative;
 }
 
+.modal-content{
+    box-shadow:none;
+    font-size: 20px;
+}
+
+.modal-header {
+    background-color:#2b6777;
+    color:#e1eedd;
+}
+
+.modal-body {
+    background-color:#e1eedd;
+}
+
+.modal-footer {
+    background-color: #2b6777;
+    justify-content: center;
+} 
+
+.modalBtn {
+    background-color: #e1eedd;
+    border-radius: 5%;
+    -moz-box-shadow: 3px 3px 4px #000; 
+    -webkit-box-shadow: 3px 3px 4px #000; 
+    box-shadow: 3px 3px 4px #000; 
+    cursor: pointer;
+}
+
+.modalBtn:hover {
+    background-color: #70776e;
+    color:#e1eedd;
+}
+
+.closeBtn {
+    background-color: #70776e;
+    color:#e1eedd;
+    border-radius: 5%;
+    -moz-box-shadow: 3px 3px 4px #000; 
+    -webkit-box-shadow: 3px 3px 4px #000; 
+    box-shadow: 3px 3px 4px #000; 
+    cursor: pointer;
+}
+
+.closeBtn:hover {
+    background-color: #e1eedd;
+    
+}
+
 .sticky-footer {
     position: flex;
     bottom: 0;
