added cost legend to enable user to value each holiday package

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,6 +182,14 @@ a.nav-link.current {
     cursor: pointer;
 }
 
+.legend-cost {
+    color: #2b6777;
+}
+
+.cost {
+    margin-bottom: 0;
+}
+
 /*styling divs to look like cards*/
 
 #card0, #card1, #card2, #card3, #card4, #card5 {
