--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -251,6 +251,19 @@ a.nav-link.current {
     position: relative;
 }
 
+.main-destination-image {
+    position: relative;
+    text-align: center;
+    color: white;
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .modal-content{
     box-shadow:none;
     font-size: 20px;
