--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -252,9 +252,16 @@ a.nav-link.current {
 }
 
 .main-destination-image {
+    height: 100%;
     position: relative;
     text-align: center;
     color: white;
+    font-family: "Lobster", "sans-serif";
+    overflow: auto;
+}
+
+.map-right {
+    overflow: auto;
 }
 
 .centered {
@@ -262,6 +269,33 @@ a.nav-link.current {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.map-container {
+    min-height: 66vh;
+}
+
+.map-buttons {
+  justify-content: center;
+
+}
+
+.map-buttons button {
+    display: block;
+}
+
+.mapBtn {
+    border: none;
+  outline: none;
+  padding: 10px 10px;
+  background-color: #2b6777;
+  cursor: pointer;
+  color: #e1eedd;
+  -moz-box-shadow: 3px 3px 4px #000; 
+  -webkit-box-shadow: 3px 3px 4px #000; 
+  box-shadow: 3px 3px 4px #000; 
+  border-radius: 5%;
+  margin: 10px auto;
 }
 
 .modal-content{
