finished basic template for all destinations js to be added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -264,6 +264,10 @@ a.nav-link.current {
     overflow: hidden;
 }
 
+.city-info {
+    font-family: "Akaya Telivigala","sans-serif";
+}
+
 .map-right {
     height: 33vh;
     overflow: hidden;
