--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,7 +192,21 @@ a.nav-link.current {
 
 /*styling divs to look like cards*/
 
-#card0, #card1, #card2, #card3, #card4, #card5 {
+.sun-card0, .sun-card1, .sun-card2, .sun-card3, .sun-card4, .sun-card5 {
+    float: left;
+    text-align: center;
+    margin: 20px auto;
+    border: 1px 1px 0px 1px solid #2b6777 ;    
+    background-color: #2b6777;
+    color: #e1eedd;
+    width: 66vh;
+    -moz-box-shadow: 3px 3px 4px #000; 
+    -webkit-box-shadow: 3px 3px 4px #000; 
+    box-shadow: 3px 3px 4px #000; 
+    font-family: "Akaya Telivigala", "sans-serif";
+}
+
+.snow-card0, .snow-card1, .snow-card2, .snow-card3, .snow-card4, .snow-card5 {
     float: left;
     text-align: center;
     margin: 20px auto;
