--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,14 +235,21 @@ a.nav-link.current {
 .card-body {
     background-color: #2b6777;
     color: #e1eedd;
+    margin: 0px 10px 10px 10px;
 }
 
 .card-img-top {
-    width: 100%;
-    height: 15vw;
+    width: 66vh;
+    height: 33vh;
     object-fit: cover;
     border:1px solid #2b6777 ;
     min-height: 150px;
+    margin: 10px 10px 0px 10px;
+}
+
+#destinations {
+    text-align: center;
+    margin: auto;
 }
 
 .contact-image {
