--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,32 +188,13 @@ a.nav-link.current {
 
 /*styling divs to look like cards*/
 
-.sun-card0, .sun-card1, .sun-card2, .sun-card3, .sun-card4, .sun-card5 {
-    float: left;
-    text-align: center;
-    margin: 20px auto;
-    border: 1px 1px 0px 1px solid #2b6777 ;    
-    background-color: #2b6777;
-    color: #e1eedd;
-    width: 66vh;
+.hover {
     -moz-box-shadow: 3px 3px 4px #000; 
     -webkit-box-shadow: 3px 3px 4px #000; 
     box-shadow: 3px 3px 4px #000; 
     font-family: "Akaya Telivigala", "sans-serif";
-}
-
-.snow-card0, .snow-card1, .snow-card2, .snow-card3, .snow-card4, .snow-card5 {
-    float: left;
-    text-align: center;
-    margin: 20px auto;
-    border: 1px 1px 0px 1px solid #2b6777 ;    
-    background-color: #2b6777;
-    color: #e1eedd;
-    width: 66vh;
-    -moz-box-shadow: 3px 3px 4px #000; 
-    -webkit-box-shadow: 3px 3px 4px #000; 
-    box-shadow: 3px 3px 4px #000; 
-    font-family: "Akaya Telivigala", "sans-serif";
+    margin: 20px 20px 20px 20px;
+    text-decoration: none;
 }
 
 .hover:hover {
@@ -227,7 +208,7 @@ a.nav-link.current {
 .card-body {
     background-color: #2b6777;
     color: #e1eedd;
-    margin: 0px 10px 10px 10px;
+    text-align: center;
 }
 
 .card-img-top {
@@ -236,12 +217,11 @@ a.nav-link.current {
     object-fit: cover;
     border:1px solid #2b6777 ;
     min-height: 150px;
-    margin: 10px 10px 0px 10px;
 }
 
 #destinations {
-    text-align: center;
     margin: auto;
+    position: relative;
 }
 
 .contact-image {
