more styling and removed iteration function for creation of divs as it is no longer needed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ body {
     background-color: #e1eedd;
 }
 
-.container-fluid, alert, alert-danger {
+.container-fluid, .alert, .alert-danger {
     margin : 0;
     border: 0;
 }
