--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,6 +193,7 @@ a.nav-link.current {
 /*styling divs to look like cards*/
 
 .hover {
+   overflow-x: hidden;
     -moz-box-shadow: 3px 3px 4px #000; 
     -webkit-box-shadow: 3px 3px 4px #000; 
     box-shadow: 3px 3px 4px #000; 
