--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -305,7 +305,7 @@ a.nav-link.current {
   -webkit-box-shadow: 3px 3px 4px #000; 
   box-shadow: 3px 3px 4px #000; 
   border-radius: 5%;
-  margin: 10px auto;
+  margin: 30px auto;
 }
 
 div#map-canvas {
@@ -332,7 +332,7 @@ div#map-canvas {
 } 
 
 .sticky-footer {
-    position: flex;
+    position: relative;
     bottom: 0;
     width: 100%;
     height: 60px;
