--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,15 @@
+/*Fonts Import*/
+
 @import url('https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
+/*Main body color*/
 
 body {
     background-color: #e1eedd;
 }
+
+/*Navbar and alert*/
 
 .container-fluid, .alert, .alert-danger {
     margin : 0;
@@ -36,6 +42,8 @@ a.nav-link.current {
     width: 100%;
     height:100%;
 }
+
+/*Homepage choice*/
 
 .choice-question {
     color:#2b6777;
@@ -114,24 +122,24 @@ a.nav-link.current {
 }
 
 .myBtn {
-  border: none;
-  outline: none;
-  padding: 10px 10px;
-  background-color: #2b6777;
-  cursor: pointer;
-  color: #e1eedd;
-  -moz-box-shadow: 3px 3px 4px #000; 
-  -webkit-box-shadow: 3px 3px 4px #000; 
-  box-shadow: 3px 3px 4px #000; 
-  border-radius: 5%;
+    border: none;
+    outline: none;
+    padding: 10px 10px;
+    background-color: #2b6777;
+    cursor: pointer;
+    color: #e1eedd;
+    -moz-box-shadow: 3px 3px 4px #000; 
+    -webkit-box-shadow: 3px 3px 4px #000; 
+    box-shadow: 3px 3px 4px #000; 
+    border-radius: 5%;
 }
 
 .myBtn:hover {
-  background-color: #15b3bb;
+    background-color: #15b3bb;
 }
 
 .mapBtn:hover {
-  background-color: #15b3bb;
+    background-color: #15b3bb;
 }
 
 .myBtn.current {
@@ -143,7 +151,7 @@ a.nav-link.current {
 }
 
 .register-Btn {
- text-align: center;
+    text-align: center;
 }
 
 .modalBtn {
@@ -190,6 +198,8 @@ a.nav-link.current {
     cursor: pointer;
 }
 
+/*Legend*/
+
 .legend-cost {
     color: #2b6777;
 }
@@ -198,10 +208,10 @@ a.nav-link.current {
     margin-bottom: 0;
 }
 
-/*styling divs to look like cards*/
+/*Cards styling*/
 
 .hover {
-   overflow-x: hidden;
+    overflow-x: hidden;
     -moz-box-shadow: 3px 3px 4px #000; 
     -webkit-box-shadow: 3px 3px 4px #000; 
     box-shadow: 3px 3px 4px #000; 
@@ -237,25 +247,11 @@ a.nav-link.current {
     position: relative;
 }
 
-.contact-image {
-    min-height: 66vh;
-
-    background: url('https://cdn.pixabay.com/photo/2018/02/22/11/18/envelope-3172770_1280.png') no-repeat center center ;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    position: relative;
-}
-
 .img-container {
     padding: 0;
 }
+
+/*Destination page styles*/
 
 .main-destination-image {
     height: 66vh;
@@ -282,16 +278,18 @@ a.nav-link.current {
 }
 
 .centered {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
+/*Map Styles*/
+
 .map-buttons {
-  justify-content: center;
-  height: 33vh;
-  min-height: 360px;
+    justify-content: center;
+    height: 33vh;
+    min-height: 360px;
 }
 
 .map-buttons button {
@@ -299,22 +297,42 @@ a.nav-link.current {
 }
 
 .mapBtn {
-  border: none;
-  outline: none;
-  padding: 10px 10px;
-  background-color: #2b6777;
-  cursor: pointer;
-  color: #e1eedd;
-  -moz-box-shadow: 3px 3px 4px #000; 
-  -webkit-box-shadow: 3px 3px 4px #000; 
-  box-shadow: 3px 3px 4px #000; 
-  border-radius: 5%;
-  margin: 30px auto;
+    border: none;
+    outline: none;
+    padding: 10px 10px;
+    background-color: #2b6777;
+    cursor: pointer;
+    color: #e1eedd;
+    -moz-box-shadow: 3px 3px 4px #000; 
+    -webkit-box-shadow: 3px 3px 4px #000; 
+    box-shadow: 3px 3px 4px #000; 
+    border-radius: 5%;
+    margin: 30px auto;
 }
 
 div#map-canvas {
     min-height: 360px;
 }
+
+/*Contact Page*/
+
+.contact-image {
+    min-height: 66vh;
+
+    background: url('https://cdn.pixabay.com/photo/2018/02/22/11/18/envelope-3172770_1280.png') no-repeat center center ;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    position: relative;
+}
+
+/*Modal Styles*/
 
 .modal-content{
     box-shadow:none;
@@ -335,6 +353,8 @@ div#map-canvas {
     justify-content: center;
 } 
 
+/*Footer*/
+
 .sticky-footer {
     position: relative;
     bottom: 0;
@@ -354,14 +374,12 @@ div#map-canvas {
 }
 
 hr {
-  width: 66%;
-  display: block;
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
-  margin-left: auto;
-  margin-right: auto;
-  border-style: inset;
-  border-width: 1px;
+    width: 66%;
+    display: block;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: inset;
+    border-width: 1px;
 }
-
-
