added styles for message

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -342,6 +342,10 @@ div#map-canvas {
   background-color: #e1eedd;
 }
 
+#message {
+  background-color: #e1eedd;
+}
+
 .modal-footer {
   background-color: #2b6777;
   justify-content: center;
